logs/beproud.utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beproud'...
Listing './lib/python3.5/site-packages/beproud/utils'...
Listing './lib/python3.5/site-packages/beproud/utils/dbutils'...
Listing './lib/python3.5/site-packages/beproud/utils/tests'...
Compiling './lib/python3.5/site-packages/beproud/utils/tests/javascript_tests.py'...
***   File "./lib/python3.5/site-packages/beproud/utils/tests/javascript_tests.py", line 23
    self.assertEqual(force_js(datetime(2009, 12, 22, 16, 35, 02)), '"2009-12-22 16:35:02"')
                                                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/beproud/utils/word.py'...
***   File "./lib/python3.5/site-packages/beproud/utils/word.py", line 8
    RE_KEYWORD_EXTRACT_IGNORE = re.compile(ur'^[()\-!?"#$%&\'\",.;ー]')
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/beproud.utils-0.34.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
